--- a/index.html
+++ b/index.html
@@ -10,218 +10,141 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css"
     integrity="sha384-nU14brUcp6StFntEOOEBvcJm4huWjB0OcIeQ3fltAfSmuZFrkAif0T+UtNGlKKQv" crossorigin="anonymous">
 
-  <title>Shukuroh</title>
+  <title>Shukuroh-portfolio</title>
 </head>
 
 <body>
+  <!-- <div class="position-fixed pt-20"> -->
 
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"><b>Shukuroh</b></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">About</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Topics
-            </a>
-            <div class="dropdown-menu" aria aria-labelledby="navbarDropdown">
-              <a class="dropdown-item"
-                href="https://www.simplilearn.com/search?item_type=course%2Cbundle%2Ccohort_master%2Cuniversity_master&tag=mean+stack">Full
-                stack</a>
-              <a class="dropdown-item"
-                href="https://www.simplilearn.com/big-data-and-analytics/senior-data-scientist-masters-program-training">MEAN
-                Stack</a>
-              <hr class="dropdown-divider">
-              <a class="dropdown-item" href="">HELP</a>
+    <nav class="navbar navbar-expand-lg bg-success">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><b>My Portfolio</b></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#home">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#project">Project</a>
+            </li>
+            <!-- <li class="nav-item">
+                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+              </li> -->
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+  <!-- </div> -->
+
+  <div class="container-fluid overflow-hidden text-center" id="home">
+    <div class="row gx-5">
+      <div class="col">
+        <div class="p-3">
+          <h3><b>Hi there,</b> <br><b>My name is Shukuroh</b></h3>
+        </div>
+      </div>
+      <div class="col">
+        <div class="p-3">
+          <img src="pic.jpg" alt="my-pic">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="text-center mt-4" id="about">
+    <h3><b><u>About</u></b></h3>
+    <p> Hello! I'm Shukuroh, a Website Designer base in Nigeria, Osun State. who has 1year Experienced in software
+      designer.<br>
+      I'm currently attending Esaoke polythecnic, Osun State as a Computer Science.
+    </p>
+  </div>
+
+  <div class="container-fluid mt-4 text-center" id="project">
+    <h3><b><u>Project</u></b></h3>
+    <img src="project.png" class="img-fluid" alt="my-project">
+  </div>
+
+  <div class="container-fluid overflow-hidden mt-5">
+    <div class="row gx-5">
+      <div class="col">
+        <div class="p-3">
+          <!-- <h3><b>Hi there,</b> <br><b>My name is Shukuroh</b></h3> -->
+
+          <div class="address">
+            <h4>CONTACT ME</h4>
+            <p style="line-height: 9px;">Email:</p>
+            <!-- <i class="fab fa-google"></i> -->
+            <a href="mailto:oyediranshukuroh02@gmail.com">oyediranshukuroh02@gmail.com</a>
+            <p>Phone Number:</p>
+            <p>08149768655</p>
+            <i"fa-brands fa-facebook-f"></i>
+              <a href="
+            https://www.facebook.com/shukuroh.mahmudoyediran/"><strong>Facebook</strong>
+              </a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="p-3">
+          <!-- <img src="pic.jpg" alt="my-pic"> -->
+
+          <form>
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="contact.html">Contact Us</a>
-          </li>
-        </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-  </nav>
 
+            <div class="mb-3">
+              <label for="Phone Number" class="phone-number">Phone Number</label><br>
+              <input type="phone Number" class="form-control" name="Phone Number" id="Phone Number">
+            </div>
 
-  <div class="container">
-    <div id="carouselExampleCaptions" class="carousel slide">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-          aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-          aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-          aria-label="Slide 3"></button>
-      </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="alexandru-acea-XEB8y0nRRP4-unsplash.jpg" class="d-block w-100" alt="code-image">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Hello from Shukuroh.</h5>
-            <button class="btn btn-primary">HTML</button>
-            <button class="btn btn-secondary">CSS</button>
-            <button class="btn btn-success">BOOTSTRAP</button>
-            <p>Some representative placeholder content for the first slide.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="thecode.jpg" class="d-block w-100" alt="code-image">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>The best coding Bootcamp.</h5>
-            <button class="btn btn-primary">HTML</button>
-            <button class="btn btn-secondary">CSS</button>
-            <button class="btn btn-success">BOOTSTRAP</button>
-            <p>Some representative placeholder content for the second slide.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="code-image.jpg" class="d-block w-100" alt="code-image">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Award wining Bootscamp.</h5>
-            <button class="btn btn-primary">HTML</button>
-            <button class="btn btn-secondary">CSS</button>
-            <button class="btn btn-success">BOOTSTRAP</button>
-            <p>Some representative placeholder content for the third slide.</p>
-          </div>
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-        data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-        data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-  </div>
+            <div class="form-floating">
+              <textarea class="form-control" placeholder="Leave a message here" id="floatingTextarea"></textarea>
+              <label for="floatingTextarea" class="message">Messages</label>
+            </div>
 
-  <div class="container my-4">
-    <div class="row mb-2">
-      <div class="col-md-6">
-        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-          <div class="col p-4 d-flex flex-column position-static">
-            <strong class="d-inline-block mb-2 text-primary-emphasis">Article</strong>
-            <h3 class="mb-0">Web Development</h3>
-            <div class="mb-1 text-body-secondary">Nov 12</div>
-            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to
-              additional content.</p>
-            <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
-              Continue reading
-              <svg class="bi">
-                <use xlink:href="#chevron-right"></use>
-              </svg>
-            </a>
-          </div>
-          <div class="col-auto d-none d-lg-block">
-           <img class="bd-placeholder-img" width="200" height="250" src="thecode.jpg">
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-          <div class="col p-4 d-flex flex-column position-static">
-            <strong class="d-inline-block mb-2 text-success-emphasis">Blog</strong>
-            <h3 class="mb-0">Bootstrap</h3>
-            <div class="mb-1 text-body-secondary">Nov 11</div>
-            <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional
-              content.</p>
-            <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
-              Continue reading
-              <svg class="bi">
-                <use xlink:href="#chevron-right"></use>
-              </svg>
-            </a>
-          </div>
-          <div class="col-auto d-none d-lg-block">
-            <img class="bd-placeholder-img" width="200" height="250" src="thecode.jpg">
-          </div>
+            <div class="mb-3 form-check">
+              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+              <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
         </div>
       </div>
     </div>
   </div>
 
-
-  <div class="container my-4">
-    <div class="row mb-2">
-      <div class="col-md-6">
-        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-          <div class="col p-4 d-flex flex-column position-static">
-            <strong class="d-inline-block mb-2 text-primary-emphasis">Article</strong>
-            <h3 class="mb-0">Web Development</h3>
-            <div class="mb-1 text-body-secondary">Nov 12</div>
-            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to
-              additional content.</p>
-            <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
-              Continue reading
-              <svg class="bi">
-                <use xlink:href="#chevron-right"></use>
-              </svg>
-            </a>
-          </div>
-          <div class="col-auto d-none d-lg-block">
-           <img class="bd-placeholder-img" width="200" height="250" src="https://source.unsplash.com/1600x900/?code, technology">
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-          <div class="col p-4 d-flex flex-column position-static">
-            <strong class="d-inline-block mb-2 text-success-emphasis">Blog</strong>
-            <h3 class="mb-0">Bootstrap</h3>
-            <div class="mb-1 text-body-secondary">Nov 11</div>
-            <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional
-              content.</p>
-            <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
-              Continue reading
-              <svg class="bi">
-                <use xlink:href="#chevron-right"></use>
-              </svg>
-            </a>
-          </div>
-          <div class="col-auto d-none d-lg-block">
-            <img class="bd-placeholder-img" width="200" height="250" src="https://source.unsplash.com/1600x900/?code, technology">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <footer class="container bg-success p-3">
+  <footer class="container-fluid bg-success p-3">
     <div class="row">
       <div class="col-md-8">
-        <p><a href="#">back to top</a></p>
+        <!-- <p><a href="#">back to top</a></p> -->
       </div>
       <div class="col-md-4">
-        <p>@ 2023-2024 Shukuroh, Inc. . <a href="#">Privacy</a> . <a href="#">Term</a></p>
+        <p>&copy; 2023-2024 Shukuroh, Inc. . <a href="#">Privacy</a> . <a href="#">Term</a></p>
       </div>
     </div>
-    <!-- <p class=""><a href="#">back to top</a></p>
-    <p>@ 2023-2024 Shukuroh, Inc. . <a href="#">Privacy</a> . <a href="#">Term</a></p> -->
-  </footer>
+
+
+
+
+  <!-- Optional JavaScript; choose one of the two! -->
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous">
+  </script>
+
 </body>
 
 </html>
